--- a/style.css
+++ b/style.css
@@ -15,32 +15,117 @@ body {
   color: #222;
   background-color: #ffe;
   font-family: 'Poppins', sans-serif;
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 2rem;
+}
+
+.user {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.user__img--wrapper {
+  order: 1;
+}
+
+.user__content--box {
+  order: 2;
+}
+
+.user__img--wrapper {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 3rem;
+}
+
+.user__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.box {
+  position: static;
+  display: flex;
+  flex-direction: column;
+}
+
+.date {
+  position: absolute;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2rem;
+  color: #555;
+}
+
+.user__job {
+  order: 2;
+  font-style: italic;
+  color: #555;
+  font-weight: 500;
+}
+
+.user__name {
+  order: 1;
+  font-size: 4rem;
+  line-height: 4rem;
+}
+
+.user__link {
+  position: absolute;
+  bottom: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-decoration: none;
+  color: rgb(200, 0, 0);
+}
+
+.user__link:hover {
+  color: rgba(200, 0, 0, 0.7);
+}
+
+.arrow {
+  transition: margin 0.5s;
+}
+
+.user__link:hover .arrow {
+  margin-left: 1rem;
 }
 
 /* For larger screeens */
 @media (min-width: 768px) {
   body {
-    height: 100vh;
     overflow: hidden;
+    display: block;
+    padding: 0;
   }
 
   .user {
     height: 100%;
-    display: flex;
+    flex-direction: row;
+    text-align: left;
   }
 
   .user__img--wrapper {
+    order: 2;
     width: 60%;
     height: 100%;
-  }
-
-  .user__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    border-radius: none;
+    overflow: visible;
+    margin-bottom: 0;
   }
 
   .user__content--box {
+    order: 1;
     width: 40%;
     height: 100%;
     display: flex;
@@ -55,6 +140,7 @@ body {
   }
 
   .user__name {
+    order: 2;
     font-weight: 900;
     font-size: 10rem;
     color: #111;
@@ -63,34 +149,17 @@ body {
   }
 
   .user__job {
-    font-style: italic;
-  }
-
-  .date {
-    position: absolute;
-    top: 3rem;
-    left: 3rem;
-    font-size: 2rem;
-    color: #555;
+    order: 1;
+    font-weight: 700;
   }
 
   .user__link {
-    position: absolute;
-    bottom: 5rem;
     left: 3rem;
-    text-decoration: none;
-    color: rgb(200, 0, 0);
+    transform: translate(0);
   }
 
-  .user__link:hover {
-    color: rgba(200, 0, 0, 0.7);
-  }
-
-  .arrow {
-    transition: margin 0.5s;
-  }
-
-  .user__link:hover .arrow {
-    margin-left: 1rem;
+  .date {
+    left: 3rem;
+    transform: translate(0);
   }
 }
